--- a/_posts/stats/2019-08-08-stats-1.md
+++ b/_posts/stats/2019-08-08-stats-1.md
@@ -97,10 +97,12 @@ Khi nào thì PMF, CDF, PDF? Discrete vs Continuous? ([ref](https://math.stackex
 
 **[??]**{:.tred} *Nếu $X$ là 1 RV, vậy $X^2$ có thể được hiểu thế nào? Lấy ví dụ?* / *Multiplication of two random variable?*. Nếu $X$ là "Số điểm trên mặt sau khi tung một con súc sắc." thì $2X = X+X$ là gì và $X^2$ là gì?
 
+$\Rightarrow$ $X+X$ chính là tổng điểm trên mặt của 2 lần tung. Còn $X\times X$ chính là tích điểm trên mặt của 2 lần tung. Ví dụ, $X=1$ (1 lần tung được 1 nút), còn $Z=2X=5$ (2 lần tung được 5 nút) và $Z=X^2=4$ (2 lần tung được 4 nút). **Tuy nhiên probability distribution sẽ thay đổi** với $2X$ và $X^2$.
+
 <ul class="collapsible" data-collapsible="accordion">
 <li>
 <div class="collapsible-header" markdown="1"><i class="material-icons">face</i>
-Trả lời câu hỏi ở trên
+Nói thêm!
 </div>
 <div class="collapsible-body" markdown="1">
 
