--- a/_posts/stats/2019-08-08-stats-1.md
+++ b/_posts/stats/2019-08-08-stats-1.md
@@ -106,7 +106,7 @@ Nói thêm!
 </div>
 <div class="collapsible-body" markdown="1">
 
-- **Convolution** (tính chập): suppose $Z=X+Y$ and $X=x$ then the event $Z=z$ is equivalent to **union** of $(X=x)$ **and** $(Y=z-x)$.
+- **Convolution** (tính chập): suppose $Z=X+Y$ and $X=x$ then the event $Z=z$ is equivalent to **union** of $(X=x)$ **and** $(Y=z-x)$. $\Rightarrow$ Có công thức tính theo $f\_X$. 
 
 Xét $P(X=1)=\frac{1}{6}$ thì khi đó $Z=3X=X+X+X$ thì $P(Z=3)=?$. Có phải là 
 
