--- a/_posts/stats/2019-08-08-stats-1.md
+++ b/_posts/stats/2019-08-08-stats-1.md
@@ -106,7 +106,7 @@ Nói thêm!
 </div>
 <div class="collapsible-body" markdown="1">
 
-- **Convolution** (tính chập): suppose $Z=X+Y$ and $X=x$ then the event $Z=z$ is equivalent to **union** of $(X=x)$ **and** $(Y=z-x)$. $\Rightarrow$ Có công thức tính theo $f\_X$. 
+- **<mark>Convolution</mark>** (tính chập, cf. [def + ex](https://www.dartmouth.edu/~chance/teaching_aids/books_articles/probability_book/Chapter7.pdf)): suppose $Z=X+Y$ and $X=x$ then the event $Z=z$ is equivalent to **union** of $(X=x)$ **and** $(Y=z-x)$. $\Rightarrow$ Có công thức tính theo $f\_X$. 
 
 Xét $P(X=1)=\frac{1}{6}$ thì khi đó $Z=3X=X+X+X$ thì $P(Z=3)=?$. Có phải là 
 
@@ -147,7 +147,7 @@ Ta có thể chuyển câu hỏi về *what is the distribution of Z?*: As a sim
   p_X(x) = P(X=x)
   $$
 
-- Properties:
+- **Properties**:
   - $0\le p\_X(x) \le 1$.
   - $\Sigma\_x p\_X(x)=1$.
 
@@ -157,6 +157,7 @@ Ta có thể chuyển câu hỏi về *what is the distribution of Z?*: As a sim
   - **Cummylative** = lũy tích -> tích lũy xác suất cho đến $x$.
   - Discrete ($\Sigma$), continuous ($\int$).
 
+  <div class="p-mark">
   $$
   \begin{align}
   F_X(x) &= P(X\le x) = (\Sigma_{t\le x}f(t)) = (\int_{-\infty}^xf_X(t)dt). \\
@@ -164,6 +165,7 @@ Ta có thể chuyển câu hỏi về *what is the distribution of Z?*: As a sim
   \bar{F}_X(x) &= P(X>x) = 1-F_X(x).
   \end{align}
   $$
+  </div>
 
 - **Properties**:
   - $0 \le F\_X(x) \le 1$
@@ -172,7 +174,7 @@ Ta có thể chuyển câu hỏi về *what is the distribution of Z?*: As a sim
   - $\lim\_{x\to -\infty}F\_X(x)=0$, $\lim\_{x\to +\infty}F\_X(x)=1$
 
 - **[??]**{:.tred} - Tại sao $a<X$ mà không phải là $a\le X$? $\Rightarrow$ tại vì nó đã bị trừ trong cái $-F\_X(a)$.
-- Dấu "=" chỉ quan trọng với discrete variable, continuous variable không quan trọng lắm!
+- <mark>Dấu "=" chỉ quan trọng với discrete variable, continuous variable không quan trọng lắm!</mark>
 
 
 ### Probability density function (PDF)
@@ -238,10 +240,10 @@ Có thể tham khảo interactive prob [tại đây](https://seeing-theory.brown
   $$
   </div>
 
-**[??]**{:.tred} *Hiểu hai dấu bằng trên như thế nào?*
+**[??]**{:.tred} *Hiểu hai dấu bằng trên như thế nào?* *$\Leftarrow$ Thật ra nên hiểu trực quan về Variance như ở dưới hơn là hiểu về 2 dấu bằng này!*{:.tred} $\Rightarrow$ Xem [ở đây](https://math.stackexchange.com/questions/700160/intuition-behind-variance-forumla)
 
 - *Dấu bằng thứ 1*: ta sẽ xem xét sự khác biệt giữa X và giá trị trung bình (mong muốn) của nó xem sao. Tuy nhiên, có nhiều cái X khác nhau (thử tưởng tượng trường hợp rời rạc), nên ta phải lấy trung bình của nó.
-- *Dấu bằng thứ 2*: Liệu sau khi $X^2$ thì trung bình của nó có giống với trước khi nó bình phương hay không? **$\Leftarrow$ Vẫn chưa thuyết phục!**{:.tred}
+- *Dấu bằng thứ 2*: Liệu sau khi $X^2$ thì trung bình của nó có giống với trước khi nó bình phương hay không? 
 
 ![Understand Bias and Variance]({{img-url}}/variance-bias.png){:.w-750}
 
@@ -262,32 +264,79 @@ DataFrame.hist(bins=10)
 #Make a histogram of the DataFrame and then check
 ~~~
 
-### Uniform Distribution
+### Uniform Distribution (continuous)
 
 - Also called *Rectangular Distribution* ([ref](https://www.mathsisfun.com/data/random-variables-continuous.html))
-- It has equal probability for all values of the Random variable between a and b:
-
-![Uniform distribution]({{img-url}}/uniform-distribution.svg){:.w-400}
-*The probability of any value between a and b is p*
-
-
-### Normal distribution
+- It has equal probability for all values of the Random variable between a and b.
 
 <div class="row d-flex" markdown="1">
 <div class="col s12 l6" markdown="1">
-![Normal Distribution: PDF]({{img-url}}/nd-1.png){:.w-500}
+![Uniform distribution: PDF]({{img-url}}/uniform-pdf.png){:.w-400}
 *Probability density function*
 </div>
 <div class="col s12 l6" markdown="1">
-![Normal Distribution: CDF]({{img-url}}/nd-2.png){:.w-500}
+![Uniform distribution: CDF]({{img-url}}/uniform-cdf.png){:.w-400}
 *Cumulative distribution function*
 </div>
 </div>
 
 <div class="row d-flex" markdown="1">
+<div class="col s12 l6" markdown="1">
+<div class="p-mark">
+$$
+PDF: f(x)=\begin{cases}{\frac {1}{b-a}}&\mathrm {for} \ a\leq x\leq b,\\[8pt]0&\mathrm {for} \ x<a\ \mathrm {or} \ x>b\end{cases}
+$$
+</div>
+</div>
+<div class="col s12 l6" markdown="1">
+<div class="p-mark">
+$$
+CDF: F(x)={\begin{cases}0&{\text{for }}x<a\\[8pt]{\frac {x-a}{b-a}}&{\text{for }}a\leq x\leq b\\[8pt]1&{\text{for }}x>b\end{cases}}
+$$
+</div>
+</div>
+</div>
+
+- **Mean** = **Median** = $\frac{a+b}{2}$.
+- **Mode** = any values in (a,b).
+- **Variance** = $\frac{(b-a)^2}{12}$
+
+### Normal distribution (continuous)
+
+<div class="row d-flex" markdown="1">
+<div class="col s12 l6" markdown="1">
+![Normal Distribution: PDF]({{img-url}}/nd-1.png){:.w-400}
+*Probability density function*
+</div>
+<div class="col s12 l6" markdown="1">
+![Normal Distribution: CDF]({{img-url}}/nd-2.png){:.w-400}
+*Cumulative distribution function*
+</div>
+</div>
+
+<div class="row d-flex" markdown="1">
+<div class="col s12 l6" markdown="1">
+<div class="p-mark">
+$$
+PDF: f(x\mid \mu ,\sigma ^{2})={\frac {1}{\sqrt {2\pi \sigma ^{2}}}}e^{-{\frac {(x-\mu )^{2}}{2\sigma ^{2}}}}
+$$
+</div>
+</div>
+<div class="col s12 l6" markdown="1">
+<div class="p-mark">
+$$
+CDF: F(x)={\frac {1}{\sqrt {2\pi }}}\int _{-\infty }^{x}e^{-t^{2}/2}\,dt
+$$
+</div>
+</div>
+</div>
+
+- **Mean** = **Median** = **Mode** = $\mu$.
+- **Variance** = $\sigma^2$.
+
+<div class="row d-flex" markdown="1">
 <div class="col s12 l7" markdown="1">
 
-- **Continuous** probability distribution.
 - **Informally called** <mark>bell curve</mark> (tuy nhiên còn nhiều distribution khác cũng có bell shape!)
 - Bài viết hay: [mathisfun](https://www.mathsisfun.com/data/standard-normal-distribution.html)
 - Bài viết chi tiết khác: [file](https://www.westga.edu/academics/research/vrc/assets/docs/the_normal_distribution_notes.pdf) (đã backup ở *the\_normal\_distribution\_notes.pdf*)
@@ -301,8 +350,8 @@ DataFrame.hist(bins=10)
 </div>
 </div>
 
-- Trò **Quincunx** cho 1 ví dụ của cái normal dist này (các viên bi rơi ngẫu nhiên xuống 1 tam giác có nhiều chướng ngại)
-- **[68-95-99.7 rule](https://en.wikipedia.org/wiki/68%E2%80%9395%E2%80%9399.7_rule)** (**Empirical rule**)
+- Trò **[Quincunx](https://www.mathsisfun.com/data/quincunx-flash.html)** cho 1 ví dụ của cái normal dist này (các viên bi rơi ngẫu nhiên xuống 1 tam giác có nhiều chướng ngại)
+- **<mark>[68-95-99.7 rule](https://en.wikipedia.org/wiki/68%E2%80%9395%E2%80%9399.7_rule)</mark>** (**Empirical rule**)
   - 68% ($\mu-\sigma, \mu+\sigma$), 95% ($\mu-2\sigma, \mu+2\sigma$), 99.7% ($\mu-3\sigma, \mu+3\sigma$)
   - **[??]**{:.tred} Tại sao giữa $(0,\delta)$ thì là 34.1% nhưng giữa $(-\delta, \delta$) lại là 68%? $\Rightarrow$ Chỉ là xấp xỉ mà thôi (để có cái tên gọn gọn của [68-95-99.7 rule](https://en.wikipedia.org/wiki/68%E2%80%9395%E2%80%9399.7_rule))
 - **Standard normal distribution**: when $\mu=0, \sigma=1$.
@@ -311,15 +360,8 @@ DataFrame.hist(bins=10)
   *Cách standardize này <mark>dùng công thức tính z-score</mark> là được!*
 - **[??]**{:.tred} *Tại sao phải standardize*? $\Rightarrow$ It can help us make decisions about our data. 
   - Giả dụ sau khi có kết quả thi, toàn điểm trên thang 100 nhưng khá thấp. Nếu chúng ta dựa vào đó thì không biết nên lấy điểm sàn là bao nhiêu. Tuy nhiên khi chuyển về standard normal dist (dựa trên điểm trung bình của đám sinh viên đã thi), ta có thể chọn được điểm sàn rõ ràng và công bằng hơn! ([ref](https://www.mathsisfun.com/data/standard-normal-distribution.html))
-- **PDF**:
 
-<div class="p-mark">
-$$
-{\displaystyle f(x\mid \mu ,\sigma ^{2})={\frac {1}{\sqrt {2\pi \sigma ^{2}}}}e^{-{\frac {(x-\mu )^{2}}{2\sigma ^{2}}}}}
-$$
-</div>
-
-**[??]**{:.tred} *Dấu hiệu nhận biết của normal distribution là gì?* **$\Leftarrow$ Vẫn chưa thuyết phục!**{:.tred}
+**[??]**{:.tred} *Dấu hiệu nhận biết của normal distribution là gì?* *$\Leftarrow$ Thật ra không biết có dấu hiệu hay không, chỉ biết là nó rất phổ biến trong tự nhiên + khi ứng dụng Central Limit Theorem thì đều converge về nó!*{:.tred}
 
 - Nếu một biến ngẫu nhiên mà chưa được biết distribution gì thì ta thường dùng cái ND này!
 - Nhờ vào **Central Limit Theorem**, càng nhiều observations thì có khả năng cao X càng converge về ND.
@@ -336,7 +378,7 @@ np.random.normal(loc=0, scale=1.0, size=None)
 
 - Plot/more examples on [numpy](https://docs.scipy.org/doc/numpy-1.13.0/reference/generated/numpy.random.normal.html).
 
-### Z-Scores
+### Z-Scores (normal dist)
 
 - Liên quan đến **Normal distribution**!
 - Khi ta muốn biết mình đứng thứ mấy trong lớp sau khi có điểm bài kiểm tra?
@@ -354,23 +396,45 @@ np.random.normal(loc=0, scale=1.0, size=None)
 - z-score (<0) càng bé thì x càng nằm trong top thấp so với trung bình.
 - EX: sau khi tính điểm trung bình của 2 đợt thi, lần 1 $z\_x=0.875$, lần 2 $z\_x=1.25$ thì ta sẽ biết được (nếu so với các bạn cùng lớp), lần 2 chúng ta làm bài tốt hơn nhiều!
 
-### Binomial distribution
+### Binomial distribution (discrete)
 
-- **Discrete** probability distribution.
+<div class="row d-flex" markdown="1">
+<div class="col s12 l6" markdown="1">
+![Binomial Distribution: PMF]({{img-url}}/binomial-pmf.png){:.w-400}
+*Probability mass function*
+</div>
+<div class="col s12 l6" markdown="1">
+![Binomial Distribution: CDF]({{img-url}}/binomial-cdf.png){:.w-400}
+*Cumulative distribution function*
+</div>
+</div>
+
+<div class="p-mark">
+$$
+PMF: p_X(k,n,p)=\Pr(k;n,p)=\Pr(X=k)={\binom {n}{k}}p^{k}(1-p)^{n-k}
+$$
+</div>
+
+<div class="p-mark">
+$$
+CDF: F(k;n,p)=\Pr(X\leq k)=\sum _{i=0}^{\lfloor k\rfloor }{n \choose i}p^{i}(1-p)^{n-i}
+$$
+</div>
+
 - When a RV has only 2 independent outcomes (giống như tung đồng xu). Each trial has the same probability.
 - **Usage**: The binomial distribution is often used in social science statistics as a building block for models for dichotomous outcome variables, like whether a Republican or Democrat will win an upcoming election, whether an individual will die within a specified period of time, etc ([ref](https://www.investopedia.com/terms/b/binomialdistribution.asp)).
 - The binomial distribution determines the probability of observing a specified number of successful outcomes in a specified number of trials.
 - **Expected value** (mean): $E = n\_{trials} \times p\_{success}$
 - **Variance**: $np(1-p)$ where $p$ is the proba of the success
+- **Median**: there is no general result for this, but [there is something interesting](https://en.wikipedia.org/wiki/Binomial_distribution#Median)!
 
-**[??]**{:.tred} *Why we have E and EX like above?* **$\Leftarrow$ Vẫn chưa thuyết phục!**{:.tred}
+**[??]**{:.tred} *Why we have E and EX like above?* 
 
-- Expected: nếu ta tung đồng xu 100 lần, hẳn ta muốn thấy mặt ngửa 50% (= $n\times p$) số đó. Dễ hiểu!
-- Variance: 
+- **Expected**: nếu ta tung đồng xu 100 lần, hẳn ta muốn thấy mặt ngửa 50% (= $n\times p$) số đó. Dễ hiểu!
+- **Variance**: **$\Leftarrow$ Chưa giải thích!**{:.tred}
 
-### Poisson distribution
+### Poisson distribution (discrete)
 
-- **Discrete** probability distribution.
 - The poisson distribution is used to calculate the **number of events** that might <mark>occur in a continuous time interval</mark>.
 - Ex: how many phone calls might occur at any particular time period or how many people might show up in a queue.
 - **PMF**:
