--- a/_posts/others/2018-10-22-list-apps.md
+++ b/_posts/others/2018-10-22-list-apps.md
@@ -12,15 +12,15 @@ My collection of good apps.
 
 {% include toc.html %}
 
-# Multi-platforms
+## Multi-platforms
 
 1. [XDM](http://xdman.sourceforge.net/#downloads) (downloader)
 
-# Windows
+## Windows
 
 1. 
 
-# Chrome extension
+## Chrome extension
 
 1. Get video link: [Flash Video Downloader](https://chrome.google.com/webstore/detail/flash-video-downloader/aiimdkdngfcipjohbjenkahhlhccpdbc)
 2. [TabCloud](https://chrome.google.com/webstore/detail/tabcloud/npecfdijgoblfcgagoijgmgejmcpnhof): save current tab list
