ud stat-1: bernoulli + binomial

--- a/_posts/stats/2019-08-08-stats-1.md
+++ b/_posts/stats/2019-08-08-stats-1.md
@@ -58,7 +58,7 @@ Khi nào thì PMF, CDF, PDF? Discrete vs Continuous? ([ref](https://math.stackex
 - In later case, when resolution higher, the measurement is closer to analog/continuous signal/variable.
  2. Way of generate a PMF from discrete data:
 - Plot a histogram of the data for all the $x$'s, the $y$-axis is the frequency or quantity at every $x$.
-- Scale the $y$-axis by dividing with total number of data collected (data size) $\longrightarrow$ and this is called PMF.
+- Scale the $y$-axis by dividing with total number of data collected (data size) $\Rightarrow$ and this is called PMF.
  3. Way of generate a PDF from discrete / continuous data:
 - Find a continuous equation that models the collected data, let say normal distribution equation.
 - Calculate the parameters required in the equation from the collected data. For example, parameters for normal distribution equation are mean and standard deviation. Calculate them from collected data.
@@ -97,7 +97,7 @@ Khi nào thì PMF, CDF, PDF? Discrete vs Continuous? ([ref](https://math.stackex
 
 **[??]**{:.tred} *Nếu $X$ là 1 RV, vậy $X^2$ có thể được hiểu thế nào? Lấy ví dụ?* / *Multiplication of two random variable?*. Nếu $X$ là "Số điểm trên mặt sau khi tung một con súc sắc." thì $2X = X+X$ là gì và $X^2$ là gì?
 
-$\Rightarrow$ $X+X$ chính là tổng điểm trên mặt của 2 lần tung. Còn $X\times X$ chính là tích điểm trên mặt của 2 lần tung. Ví dụ, $X=1$ (1 lần tung được 1 nút), còn $Z=2X=5$ (2 lần tung được 5 nút) và $Z=X^2=4$ (2 lần tung được 4 nút). **Tuy nhiên probability distribution sẽ thay đổi** với $2X$ và $X^2$.
+$\Rightarrow$ $X+X$ chính là tổng điểm trên mặt của 2 lần tung. Còn $X^2$ chính là tích điểm trên mặt của 2 lần tung. Ví dụ, $X=1$ (1 lần tung được 1 nút), còn $Z=2X=5$ (2 lần tung được 5 nút) và $Z=X^2=4$ (2 lần tung được 4 nút). **Tuy nhiên probability distribution sẽ thay đổi** với $2X$ và $X^2$.
 
 <ul class="collapsible" data-collapsible="accordion">
 <li>
@@ -229,6 +229,14 @@ Có thể tham khảo interactive prob [tại đây](https://seeing-theory.brown
   - Trước hết phải hiểu PDF là gì? (Xem bên dưới)
   - Sau khi hiểu $f\_X$ rồi thì $f\_X(x)$ cũng là xác suất của $X$ tại $x$ (Tượng trưng là $P(X=x)$ nhưng P này =0 trong trường hợp X continuous này!).
 
+**Expectation of Function of Discrete Random Variable** ([ref + proof](https://proofwiki.org/wiki/Expectation_of_Function_of_Discrete_Random_Variable)):
+
+<div class="p-mark">
+$$
+\displaystyle E \left({g \left({X}\right)}\right) = \sum_{x \mathop \in \Omega_X} g \left({x}\right) \Pr \left({X = x}\right)
+$$
+</div>
+
 ### Variance
 
 **Variance** = Whereas expectation provides a measure of centrality, the variance of a random variable quantifies the <mark>spread of that random variable</mark>'s distribution.
@@ -341,7 +349,7 @@ $$
 - Bài viết hay: [mathisfun](https://www.mathsisfun.com/data/standard-normal-distribution.html)
 - Bài viết chi tiết khác: [file](https://www.westga.edu/academics/research/vrc/assets/docs/the_normal_distribution_notes.pdf) (đã backup ở *the\_normal\_distribution\_notes.pdf*)
 - Đặc trưng: **mean** ($\mu$) and **standard deviation** ($\sigma$) (*Deviation means "distance from the mean".*)
-- Nếu một biến ngẫu nhiên X có phân phối chuẩn thì: $X\sim \mathcal{N}(\mu, \sigma)$.
+- Nếu một biến ngẫu nhiên X có phân phối chuẩn thì: <mark>$X\sim \mathcal{N}(\mu, \sigma)$</mark>.
 - Ví dụ của "**not** a normal distribution": [xúc xắc](https://brilliant.org/wiki/central-limit-theorem/), điểm thi của học sinh lớp 9 khi làm đề lớp 8.
 
 </div>
@@ -354,7 +362,7 @@ $$
 - **<mark>[68-95-99.7 rule](https://en.wikipedia.org/wiki/68%E2%80%9395%E2%80%9399.7_rule)</mark>** (**Empirical rule**)
   - 68% ($\mu-\sigma, \mu+\sigma$), 95% ($\mu-2\sigma, \mu+2\sigma$), 99.7% ($\mu-3\sigma, \mu+3\sigma$)
   - **[??]**{:.tred} Tại sao giữa $(0,\delta)$ thì là 34.1% nhưng giữa $(-\delta, \delta$) lại là 68%? $\Rightarrow$ Chỉ là xấp xỉ mà thôi (để có cái tên gọn gọn của [68-95-99.7 rule](https://en.wikipedia.org/wiki/68%E2%80%9395%E2%80%9399.7_rule))
-- **Standard normal distribution**: when $\mu=0, \sigma=1$.
+- **Standard normal distribution**: when $\mu=0, \sigma=1$ or <mark>$X\sim \mathcal{N}(0,1)$</mark>.
 
   ![Standardizing]({{img-url}}/standardizing.svg)
   *Cách standardize này <mark>dùng công thức tính z-score</mark> là được!*
@@ -396,6 +404,9 @@ np.random.normal(loc=0, scale=1.0, size=None)
 - z-score (<0) càng bé thì x càng nằm trong top thấp so với trung bình.
 - EX: sau khi tính điểm trung bình của 2 đợt thi, lần 1 $z\_x=0.875$, lần 2 $z\_x=1.25$ thì ta sẽ biết được (nếu so với các bạn cùng lớp), lần 2 chúng ta làm bài tốt hơn nhiều!
 
+
+
+{:#bi-dis}
 ### Binomial distribution (discrete)
 
 <div class="row d-flex" markdown="1">
@@ -411,27 +422,60 @@ np.random.normal(loc=0, scale=1.0, size=None)
 
 <div class="p-mark">
 $$
-PMF: p_X(k,n,p)=\Pr(k;n,p)=\Pr(X=k)={\binom {n}{k}}p^{k}(1-p)^{n-k}
+\text{PMF}: p_X(k,n,p)=\Pr(k;n,p)=\Pr(X=k)=C_n^k p^{k}(1-p)^{n-k}
 $$
 </div>
 
 <div class="p-mark">
 $$
-CDF: F(k;n,p)=\Pr(X\leq k)=\sum _{i=0}^{\lfloor k\rfloor }{n \choose i}p^{i}(1-p)^{n-i}
+\text{PDF}: F_X(k;n,p)=\Pr(X\leq k)=\sum _{i=0}^{\lfloor k\rfloor }C_n^i p^{i}(1-p)^{n-i}
 $$
 </div>
 
-- When a RV has only 2 independent outcomes (giống như tung đồng xu). Each trial has the same probability.
-- **Usage**: The binomial distribution is often used in social science statistics as a building block for models for dichotomous outcome variables, like whether a Republican or Democrat will win an upcoming election, whether an individual will die within a specified period of time, etc ([ref](https://www.investopedia.com/terms/b/binomialdistribution.asp)).
-- The binomial distribution determines the probability of observing a specified number of successful outcomes in a specified number of trials.
-- **Expected value** (mean): $E = n\_{trials} \times p\_{success}$
+- When a <mark>RV has only 2 independent outcomes</mark> (giống như tung đồng xu). Each trial has the same probability.
+- **Usage**{:.tblue}: The binomial distribution is often used in social science statistics as a building block for models for dichotomous outcome variables, like whether a **Republican or Democrat** will win an upcoming **election**, whether an **individual will die** within a specified period of time, etc ([ref](https://www.investopedia.com/terms/b/binomialdistribution.asp)).
+- The binomial distribution determines the probability of observing a specified <mark>number of successful outcomes in a specified number of trials.</mark>
+  - **Ex**: Tung đồng xu 10 lần, 4 lần được mặt ngửa, biết xs được mặt ngử là 0.7: $n=10, k=4, p=0.7$ $\Rightarrow p\_X = C\_10^4 (0.7)^4 (0.3)^6$. 
+- **[??]**{:.tred} *Hiểu PMF như thế nào?* 
+  - **PMF**: Giả sử ta xét n trials là 1 dãy hàng ngang n vị trí. Trong n trials ta chỉ được k trường hợp, mỗi trường hợp có xs đạt được là p nên đầu tiên ta cần chọn ra k vị trí thành công trước cái đã, có $C\_n^k$ cách chọn vị trí này. Ứng với mỗi cách chọn k vị trí này, mỗi vị trí nếu muốn được thành công thì có xs là p nên k chỗ sẽ cần $p^k$. Đồng thời các chỗ còn lại phải không thành công (nếu không thì có thể có nhiều hơn k trường hợp thành công), do đó các chỗ ko thành công này nếu muốn đạt được thì ứng với $(1-p)^{n-k}$. Do tất cả các điều kiện này phải xảy ra dính líu đến nhau nên phải nhân chúng lại, hay ta được công thức của PMF.
+  - **PDF**: chỉ việc tổng hết các trường hợp lại thôi vì $X\le x$.
+- Nếu một biến ngẫu nhiên X có phân phối binomial thì: <mark>$X\sim B(n,p)$</mark>.
+  - When $n=1$ then it's [Bernoulli distribution](#ber-dist).
+- **Expected value** (mean): $EX = n\_{trials} \times p\_{success}$
 - **Variance**: $np(1-p)$ where $p$ is the proba of the success
 - **Median**: there is no general result for this, but [there is something interesting](https://en.wikipedia.org/wiki/Binomial_distribution#Median)!
 
 **[??]**{:.tred} *Why we have E and EX like above?* 
 
 - **Expected**: nếu ta tung đồng xu 100 lần, hẳn ta muốn thấy mặt ngửa 50% (= $n\times p$) số đó. Dễ hiểu!
-- **Variance**: **$\Leftarrow$ Chưa giải thích!**{:.tred}
+- **Variance**: do X là n trial $X\_i$ khác nhau, mỗi trial là 1 Bernoulli distribution nên ta chuyển việc hiểu variance về hiểu variance của Bernoulli distribution ([ref](https://en.wikipedia.org/wiki/Binomial_distribution#Variance)).
+
+{:#ber-dist}
+### Bernoulli distribution (discrete)
+
+<div class="row d-flex" markdown="1">
+<div class="col s12 l6" markdown="1">
+<div class="p-mark">
+$$
+\text{PMF}: p_X(x)=\begin{cases}p \, \text{if }x=1 \\ q=1-p \, \text{if }x=0 \end{cases}
+$$
+</div>
+</div>
+<div class="col s12 l6" markdown="1">
+<div class="p-mark">
+$$
+\text{CDF}: F(x)={\begin{cases}0&{\text{for }}x<a\\[8pt]{\frac {x-a}{b-a}}&{\text{for }}a\leq x\leq b\\[8pt]1&{\text{for }}x>b\end{cases}}
+$$
+</div>
+</div>
+</div>
+
+- Xem [wiki](Bernoulli distribution) cho bảng tóm tắt mấy cái hàm.
+- <mark>$X\sim B(1,p)$</mark>: special case of [binomial distribution](#bi-dis)
+- Tung đồng xu 1 lần duy nhất: xác suất để được mặt số 1 là p, mặt số 0 là 1-p, thế thôi.
+- **Mean**: $EX = 1\times \Pr(X=1) + 0\times \Pr(X=0) = p$.
+- **Variance**: check [this](https://en.wikipedia.org/wiki/Bernoulli_distribution#Variance), nhớ dùng [Expectation of Function of Discrete Random Variable](https://proofwiki.org/wiki/Expectation_of_Function_of_Discrete_Random_Variable). Chỉ cần dùng công thức là ok.
+- 
 
 ### Poisson distribution (discrete)
 
