--- a/_posts/french/2019-03-26-french-1.md
+++ b/_posts/french/2019-03-26-french-1.md
@@ -218,3 +218,6 @@ Tu as de vieux meubles.
 - **servir à** + verbe = to be used for?
   - **À** quoi **sert** cet objet? = Vật này được dùng làm gì?
   - Cet apareil **sert à** prendre des photos.
+- **passer** un examen = **taking** a test
+  - **réussir** un examen = **passing** a test
+- s'entendre with + qqn = get along with + s/o = hòa đồng với ai
