--- a/_posts/stats/2019-08-08-stats-1.md
+++ b/_posts/stats/2019-08-08-stats-1.md
@@ -18,9 +18,10 @@ Learn again Stats for Machine Learning and Data Science. A preparation step befo
 
 ## References
 
-- Book: **Understandable Statistics**- Brase Brase BOOK.pdf
-- Book: **Think Stats 2** (with Python) - Allen B. Downey.
+- Book: **[Understandable Statistics](https://books.google.fr/books?id=a8OiAgAAQBAJ&printsec=frontcover&dq=understandable+statistics&hl=en&sa=X&ved=0ahUKEwiR9-2n0YTkAhWnRBUIHQODDa0Q6AEIMTAB#v=onepage&q=understandable%20statistics&f=false)**- Brase Brase BOOK.pdf
+- Book: **[Think Stats 2](https://greenteapress.com/thinkstats2/thinkstats2.pdf)** (with Python) - Allen B. Downey.
 - Interactive book: **[Seeing Theory](https://seeing-theory.brown.edu)**.
+- [probabilitycourse.com](https://www.probabilitycourse.com/): an online book
 
 ## Fundamental
 
@@ -428,7 +429,7 @@ $$
 
 <div class="p-mark">
 $$
-\text{PDF}: F_X(k;n,p)=\Pr(X\leq k)=\sum _{i=0}^{\lfloor k\rfloor }C_n^i p^{i}(1-p)^{n-i}
+\text{CDF}: F_X(k;n,p)=\Pr(X\leq k)=\sum _{i=0}^{\lfloor k\rfloor }C_n^i p^{i}(1-p)^{n-i}
 $$
 </div>
 
@@ -453,6 +454,9 @@ $$
 {:#ber-dist}
 ### Bernoulli distribution (discrete)
 
+![Bernoulli distribution: PMF]({{img-url}}/bernoulli-pmf.png){:.w-500}
+*PMF of a Bernoulli random variable*
+
 <div class="row d-flex" markdown="1">
 <div class="col s12 l6" markdown="1">
 <div class="p-mark">
@@ -475,30 +479,68 @@ $$
 - Tung đồng xu 1 lần duy nhất: xác suất để được mặt số 1 là p, mặt số 0 là 1-p, thế thôi.
 - **Mean**: $EX = 1\times \Pr(X=1) + 0\times \Pr(X=0) = p$.
 - **Variance**: check [this](https://en.wikipedia.org/wiki/Bernoulli_distribution#Variance), nhớ dùng [Expectation of Function of Discrete Random Variable](https://proofwiki.org/wiki/Expectation_of_Function_of_Discrete_Random_Variable). Chỉ cần dùng công thức là ok.
-- 
 
 ### Poisson distribution (discrete)
 
-- The poisson distribution is used to calculate the **number of events** that might <mark>occur in a continuous time interval</mark>.
-- Ex: how many phone calls might occur at any particular time period or how many people might show up in a queue.
-- **PMF**:
+<div class="row d-flex" markdown="1">
+<div class="col s12 l6" markdown="1">
+![Poisson distribution: PMF]({{img-url}}/possion-pmf.png){:.w-400}
+*The horizontal axis is the index k, the number of occurrences. $\lambda$ is the expected number of occurrences, which need not be an integer. The vertical axis is the probability of k occurrences given $\lambda$. The function is defined only at integer values of k. The connecting lines are only guides for the eye.*
+</div>
+<div class="col s12 l6" markdown="1">
+![Poisson distribution: CDF]({{img-url}}/possion-cdf.png){:.w-400}
+*The horizontal axis is the index k, the number of occurrences. The CDF is discontinuous at the integers of k and flat everywhere else because a variable that is Poisson distributed takes on only integer values.*
+</div>
+</div>
 
 <div class="p-mark">
 $$
-p_X(\text{k events in interval}) = e^{-\lambda}\dfrac{\lambda^k}{k!}
+\text{PMF} p_X(\text{k events in interval}) = e^{-\lambda}\dfrac{\lambda^k}{k!}
 $$
 </div>
 
-  - $\lambda$ is the average number of events per interval
-  - $k$ takes values $0,1,2,\ldots$
+- $\lambda$ is the average number of events per interval
+- $k$ takes values $0,1,2,\ldots$
+- The poisson distribution is used to calculate the **number of events** that might <mark>occur in a continuous time interval</mark>.
+- **Examples**: 
+  - An individual keeping track of the **amount of mail they receive each day** may notice that they receive an average number of 4 letters per day. If receiving any particular piece of mail does not affect the arrival times of future pieces of mail, i.e., if pieces of mail from a wide range of sources arrive independently of one another, then a reasonable assumption is that the number of pieces of mail received in a day obeys a Poisson distribution.[[ref](http://www.umass.edu/wsp/resources/poisson/index.html)] 
+  - Other examples that may follow a Poisson distribution include the **number of phone calls received** by a call center **per hour** 
+  - The **number of decay events per second** from a radioactive source.
 
 
 ## Central Limit Theorem
 
-- Định lý giới hạn trung tâm.
-- Def (ref to [brilliant](https://brilliant.org/wiki/central-limit-theorem/)): The central limit theorem is a theorem about **independent random variables**, which says roughly that the probability distribution of the average of independent random variables will **converge to a normal distribution**, as the number of observations increases. The somewhat surprising strength of the theorem is that (under certain natural conditions) there is essentially no assumption on the probability distribution of the variables themselves; the **theorem remains true no matter what the individual probability distributions are**.
+![Illustration of Central Limit Theorem]({{img-url}}/IllustrationCentralTheorem.png){:.w-750}
+*Whatever the form of the population distribution, the sampling distribution tends to a Gaussian, and its dispersion is given by the Central Limit Theorem.[[ref](http://www.incertitudes.fr/book.pdf)]*
 
-**[??]**{:.tred} *Ví dụ của một X không có normal distribution nhưng converge về ND?*: [[1]](https://brilliant.org/wiki/central-limit-theorem/) **$\Leftarrow$ Vẫn chưa xong!**{:.tred}
+- Định lý giới hạn trung tâm.
+- The Central Limit Theorem for **Any Probability Distribution**: If x possesses **any** distribution with mean $\mu$ and standard deviation $\sigma$, then the sample mean $\bar{x}$ based on a random sample of size $n$ will have a distribution that approaches the distribution of a normal random variable with mean $\mu$ and standard deviation $\sigma/\sqrt{n}$ as $n$  increases without limit.
+- The somewhat surprising strength of the theorem is that (under certain natural conditions) there is essentially no assumption on the probability distribution of the variables themselves; the **theorem remains true no matter what the individual probability distributions are**.
+
+**[??]**{:.tred} *Ví dụ của một X không có normal distribution nhưng converge về ND?*: [[1]](https://brilliant.org/wiki/central-limit-theorem/) *$\Leftarrow$ Thật ra dựa vào số lượng sample, ta có thể dự đoán mean và SD có thể convert về normal dist chứ thật ra một cái bất kỳ vẫn chưa tìm thấy ví dụ được!*{:.tred}
+
+**[??]**{:.tred} *How large should the sample sizebe if we want to apply the central limit theorem?* $\Rightarrow$ <mark>$n\ge 30$</mark> nhưng đừng dùng nó mù quáng! (ref. Theorem 7.2 of book *Understandable Statistics*)
+
+Using CLT ($\bar{x}$ distribution $\to$ normal distribution), we have:
+
+$$
+\begin{align}
+\mu_{\bar{x}} &= \mu, \\
+\sigma_{\bar{x}} &= \dfrac{\sigma}{\sqrt{n}} \\
+z &= \dfrac{\bar{x}-\mu_{\bar{x}}}{\sigma_{\bar{x}}} = \dfrac{\bar{x}-\mu}{\sigma/\sqrt{n}}
+\end{align}
+$$
+
+where,
+
+- $n$ is the sample size ($n\ge 30$)
+- $\mu$ is the mean of $x$ distribution
+- $\sigma$ is the SD of $x$ distribution.
+
+### t-values
+
+
+### Confidence interval & uncertainly
 
 
 
