--- a/_posts/stats/2019-08-08-stats-1.md
+++ b/_posts/stats/2019-08-08-stats-1.md
@@ -18,7 +18,7 @@ Learn again Stats for Machine Learning and Data Science. A preparation step befo
 
 ## References
 
-- Book: **[Understandable Statistics](https://books.google.fr/books?id=a8OiAgAAQBAJ&printsec=frontcover&dq=understandable+statistics&hl=en&sa=X&ved=0ahUKEwiR9-2n0YTkAhWnRBUIHQODDa0Q6AEIMTAB#v=onepage&q=understandable%20statistics&f=false)**- Brase Brase BOOK.pdf
+- [1] Book: **[Understandable Statistics](https://books.google.fr/books?id=a8OiAgAAQBAJ&printsec=frontcover&dq=understandable+statistics&hl=en&sa=X&ved=0ahUKEwiR9-2n0YTkAhWnRBUIHQODDa0Q6AEIMTAB#v=onepage&q=understandable%20statistics&f=false)**- Brase Brase BOOK.pdf
 - Book: **[Think Stats 2](https://greenteapress.com/thinkstats2/thinkstats2.pdf)** (with Python) - Allen B. Downey.
 - Interactive book: **[Seeing Theory](https://seeing-theory.brown.edu)**.
 - [probabilitycourse.com](https://www.probabilitycourse.com/): an online book
@@ -510,7 +510,7 @@ $$
 
 ## Central Limit Theorem
 
-![Illustration of Central Limit Theorem]({{img-url}}/IllustrationCentralTheorem.png){:.w-750}
+![Illustration of Central Limit Theorem]({{img-url}}/IllustrationCentralTheorem.png){:.w-650}
 *Whatever the form of the population distribution, the sampling distribution tends to a Gaussian, and its dispersion is given by the Central Limit Theorem.[[ref](http://www.incertitudes.fr/book.pdf)]*
 
 - Định lý giới hạn trung tâm.
@@ -519,7 +519,7 @@ $$
 
 **[??]**{:.tred} *Ví dụ của một X không có normal distribution nhưng converge về ND?*: [[1]](https://brilliant.org/wiki/central-limit-theorem/) *$\Leftarrow$ Thật ra dựa vào số lượng sample, ta có thể dự đoán mean và SD có thể convert về normal dist chứ thật ra một cái bất kỳ vẫn chưa tìm thấy ví dụ được!*{:.tred}
 
-**[??]**{:.tred} *How large should the sample sizebe if we want to apply the central limit theorem?* $\Rightarrow$ <mark>$n\ge 30$</mark> nhưng đừng dùng nó mù quáng! (ref. Theorem 7.2 of book *Understandable Statistics*)
+**[??]**{:.tred} ***How large should the sample size be*** *if we want to apply the central limit theorem?* $\Rightarrow$ <mark>$n\ge 30$</mark> nhưng đừng dùng nó mù quáng! (ref. Theorem 7.2 of book *Understandable Statistics*)
 
 Using CLT ($\bar{x}$ distribution $\to$ normal distribution), we have:
 
@@ -537,11 +537,35 @@ where,
 - $\mu$ is the mean of $x$ distribution
 - $\sigma$ is the SD of $x$ distribution.
 
-### t-values
+### t-values (Student's t distributions, t-statistic, t-test)
 
+- *Student's t distribution* được khám phá bởi W.S. Gosset. Vốn dĩ nó có tên vậy là vì ngày đó cty ông đang làm cho không khuyến khích nhân viên của mình đăng báo riêng. Do đó ông đã lấy bút danh là *Student*. Ông đã dùng biến $t$ nên nó vẫn được giữ tên như vậy!
+- Statistical methods for obtaining **reliable information** from samples of populations with <mark>unknown SD $\sigma$</mark> (*không biến độc phân tán dữ liệu ra sao*!!!).
 
-### Confidence interval & uncertainly
+<div class="thi-box" markdown="1">
+<div class="box-title" markdown="1">
+**Student's t distribution** [1]
+</div>
+<div class="box-content" markdown="1">
+Assume that $x$ has normal distribution with mean $\mu$. For sample size $n$, with the sample mean $\bar{x}$ and sample standard deviation $s$, the **t variable**,
 
+$$
+t = \dfrac{\bar{x}-\mu}{\frac{s}{\sqrt{n}}}
+$$
+
+has a **Student's t distribution** with **degrees of freedom** $n-1$.
+</div>
+</div>
+
+- The **shape** of the t distribution <mark>depends only on $n$</mark>, **provided** the basic variable $x$ has a **normal distribution**. 
+
+![t distribution's properties]({{img-url}}/t-dist.jpg){:.w-750}
+
+### Confidence interval (CI) & uncertainly
+
+- **Refs**: [1, p.345], [[4](http://www.stat.yale.edu/Courses/1997-98/101/confint.htm)]
+- **What is?**
+- Confidence interval **for mean $\mu$** when **SD $\sigma$ is unknown**: 
 
 
 
