--- a/_posts/french/2019-03-26-french-1.md
+++ b/_posts/french/2019-03-26-french-1.md
@@ -150,11 +150,18 @@ When forming the imparfait, you’ll start from forms like nous écriv**ons** an
 - Si + present, futur
   - Si tu **étudies**, tu **auras** une bonne note.
 
-## Expressions with avoir
+## Passé
 
-- avoir l’air = to look, to seem
-- avoir envie de = to want, to be in the mood for
-- avoir honte de qqn = be ashamed of so
+You will also use **être** with verbs that start with **se**, like *se réveiller*, *se perdre*, and *s'habiller*.
+
+- Ils **se sont** perdus.
+- Nous **nous sommes habillés** = We got dressed.
+- Ils **ne** se sont pas perdus.
+
+<p class="">
+S + (ne) + se + être + (pas) + V​​​
+
+
 
 ## should
 
@@ -221,3 +228,6 @@ Tu as de vieux meubles.
 - **passer** un examen = **taking** a test
   - **réussir** un examen = **passing** a test
 - s'entendre with + qqn = get along with + s/o = hòa đồng với ai
+- avoir l’air = to look, to seem
+- avoir envie de = to want, to be in the mood for
+- avoir honte de qqn = be ashamed of so
