--- a/_posts/stats/2019-08-08-stats-1.md
+++ b/_posts/stats/2019-08-08-stats-1.md
@@ -539,8 +539,10 @@ where,
 
 ### t-values (Student's t distributions, t-statistic, t-test)
 
+**[??]**{:.tred} *Tóm lại t-values có tác dụng gì?* Thu nhận những thông tin đáng tin cậy từ những sample khi **SD chưa biết**! 
+
 - *Student's t distribution* được khám phá bởi W.S. Gosset. Vốn dĩ nó có tên vậy là vì ngày đó cty ông đang làm cho không khuyến khích nhân viên của mình đăng báo riêng. Do đó ông đã lấy bút danh là *Student*. Ông đã dùng biến $t$ nên nó vẫn được giữ tên như vậy!
-- Statistical methods for obtaining **reliable information** from samples of populations with <mark>unknown SD $\sigma$</mark> (*không biến độc phân tán dữ liệu ra sao*!!!).
+- Statistical methods for obtaining <mark>**reliable information** from samples of populations</mark> with <mark>unknown SD $\sigma$</mark> (*không biến độc phân tán dữ liệu ra sao*!!!).
 
 <div class="thi-box" markdown="1">
 <div class="box-title" markdown="1">
