rename folder ml-coursera

--- a/_posts/french/2019-03-26-french-1.md
+++ b/_posts/french/2019-03-26-french-1.md
@@ -85,7 +85,9 @@ But when we use **me, te, nous, vous**, these words come **before** le, la, les.
 
 Watch out for the difference between les and leur: les is the direct object (the things you offer) and leur the indirect object (whom you offer them to).
 
-## On y va !
+## Usage of "y"
+
+### On y va !
 
 The word **y** replaces a place in a sentence. It often means **there** but sometimes shows up in French where we'd otherwise leave out the word **there** in English. Just like en, lui, les, and leur, **y comes before the verb**.
 
@@ -103,7 +105,23 @@ Let’s go!
 Allons‑**y** !<br />
 Let’s go!
 
-## en
+### Tu t'y intéresses.​
+
+**Y** can replace any **noun** that comes after **à**, as long as **it’s not a person**. Be careful, you can <mark>only use y in this context</mark>. 
+
+<p class="p-mark">
+S + V + **à** + **noun** (not a person) -> S + **y** + V.
+</p>
+
+- ​Tu t’intéresses **à la musique**.​ -> Tu t'**y** intéresses.
+- Vous réfléchissez **à ma suggestion**.​ -> Vous **y** réfléchissez.
+- Ils pensent **aux examens**.​ -> Ils **y** pensent.​​​
+
+## J’en ai besoin
+
+<p class="p-mark">
+S + V + **de** + **noun** -> S + **en** + V.
+</p>
 
 - **Il n’y en a pas** = there isn’t (aren’t) any.
   - Je voudrais acheter des oranges, mais il n’y en a pas.
@@ -231,3 +249,15 @@ Tu as de vieux meubles.
 - avoir l’air = to look, to seem
 - avoir envie de = to want, to be in the mood for
 - avoir honte de qqn = be ashamed of so
+- **depuis** = since/for + điểm thời gian / khoảng thời gian đều được
+- **Il arrive à** travailler dans ce petit bureau ? = **He is able to** work...?
+- On en a envie. = Nous en avons envie. = We want to.
+- They're **getting used to** their new factory. = Ils s'**habituent à** leur nouvelle usine.
+- **à la carte** menu = thực đơn gọi từng món
+  - menu **fixe** = thực đơn cố định.
+  - **en** entrée/dessert
+  - Quel **plat principal** avez-vous choisi?
+  - un **pourboire** = tiền tip
+  - les légumes crus = rau sống = raw vegetables
+  - la viande cuite à point = thịt đã chín
+  - Cette viande grillée est trop **saignante** pour moi = miếng thịt nướng này **quá tái** với tui.
