--- a/_posts/others/2018-10-22-list-apps.md
+++ b/_posts/others/2018-10-22-list-apps.md
@@ -15,10 +15,12 @@ My collection of good apps.
 ## Multi-platforms
 
 1. [XDM](http://xdman.sourceforge.net/#downloads) (downloader)
+2. [AdGuard](https://adguard.com) : cookies, ads protector (giới thiệu từ Tôi Đi Code Dạo).
 
 ## Windows
 
-1. 
+1. [ScreenToGif](https://www.screentogif.com/) : quay phim màn hình rùi xuất ra file gif.
+2. Lightweight pdf reader (để xem nhanh 1 file pdf): nên mở bằng Chrome!
 
 ## Chrome extension
 
