dl-coursera course-1 week-1

--- a/_posts/french/2019-03-26-french-1.md
+++ b/_posts/french/2019-03-26-french-1.md
@@ -261,3 +261,4 @@ Tu as de vieux meubles.
   - les légumes crus = rau sống = raw vegetables
   - la viande cuite à point = thịt đã chín
   - Cette viande grillée est trop **saignante** pour moi = miếng thịt nướng này **quá tái** với tui.
+- mettre un **petit pouce en l'air** = cho một like!
