--- a/_posts/french/2019-03-26-french-1.md
+++ b/_posts/french/2019-03-26-french-1.md
@@ -262,3 +262,4 @@ Tu as de vieux meubles.
   - la viande cuite à point = thịt đã chín
   - Cette viande grillée est trop **saignante** pour moi = miếng thịt nướng này **quá tái** với tui.
 - mettre un **petit pouce en l'air** = cho một like!
+- travailler **main das la main** = làm việc chặt chẽ, cùng nhau.
