--- a/_posts/french/2019-03-26-french-1.md
+++ b/_posts/french/2019-03-26-french-1.md
@@ -176,9 +176,9 @@ You will also use **être** with verbs that start with **se**, like *se réveill
 - Nous **nous sommes habillés** = We got dressed.
 - Ils **ne** se sont pas perdus.
 
-<p class="">
+<p class="p-mark">
 S + (ne) + se + être + (pas) + V​​​
-
+</p>
 
 
 ## should
