--- a/_posts/french/2019-03-26-french-1.md
+++ b/_posts/french/2019-03-26-french-1.md
@@ -248,6 +248,7 @@ Tu as de vieux meubles.
 - s'entendre with + qqn = get along with + s/o = hòa đồng với ai
 - avoir l’air = to look, to seem
 - avoir envie de = to want, to be in the mood for
+- Ça me **donne envie de** voyager. = Nó **làm tôi muốn** đi du lịch!
 - avoir honte de qqn = be ashamed of so
 - **depuis** = since/for + điểm thời gian / khoảng thời gian đều được
 - **Il arrive à** travailler dans ce petit bureau ? = **He is able to** work...?
@@ -263,3 +264,11 @@ Tu as de vieux meubles.
   - Cette viande grillée est trop **saignante** pour moi = miếng thịt nướng này **quá tái** với tui.
 - mettre un **petit pouce en l'air** = cho một like!
 - travailler **main das la main** = làm việc chặt chẽ, cùng nhau.
+- c'est à dire = that means
+  - ca veut dire = it means
+  - je veux dire = I mean
+- se faire virer (familier) = perdre son travail
+- du coup = therefore
+  - = par conséquent
+- être à cheval sur qqc = nghiêm túc, khó tính về cái gì đó
+- hypocrite = đạo đức giả / kẻ đạo đức giả
